--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -45,44 +45,69 @@
 	}
 	.main {
 		.mu-filter {
-			padding: 0 30px 0 0;
-			.filter-salary {
-				color: $black;
-				font-size: 18px;
-			}
+      padding: 0 30px 0 0;
+      p {
+        color: $black;
+        font-size: 22px;
+      }
 			.block-salary {
-				background-color: $white;
-				padding: 10px 25px;
+        background-color: $white;
+				border-radius: 3px;
+        box-shadow: 0 2px 1px 0 $gray-light-3;
+        padding: 20px 25px;
 				input {
-					width: 100%;
+          -moz-box-shadow: inset 0 1px 0 $gray-light-1;
+          -webkit-box-shadow: inset 0 1px 0 $gray-light-1;
+          background-color: $gray-light-1;
+          border: 1px solid $gray-light-3;
+          border-radius: 3px;
+          box-shadow: inset 0 1px 0 $gray-light-1;
+          font-size: 13px;
+          height: 30px;
+          line-height: 30px;
+          padding: 0 10px;
+          width: 100%;
         }
+        .input-range__label {
+          display: none;
+        }
+        .input-range__track--active {
+          background: $pure-blue;
+        }
+        .input-range__slider {
+          background: $pure-blue;
+          border: 1px solid $white;
+        }
+
         .apply {
-          text-align: center;
+          text-align: right;
           button {
             background: none;
             border: 1px solid $pure-blue;
             border-radius: 3px;
-            color: $pure-blue;
+            color: $black;
             font-size: 12px;
             height: 30px;
             padding: 0 10px;
+            text-transform: uppercase;
             &::after {
               background: url('../images/select-small.png') no-repeat 0 0;
-              background-position: 0 -9px;
               content: '';
               display: inline-block;
               height: 7px;
               margin-left: 5px;
               width: 9px;
-
             }
+
+            &:hover::after {
+              background-position: 0 -9px;
+            }
+
             &:hover {
-              background-color: #0288d1;
-              background-image: -moz-linear-gradient( -35deg, #0288d1 75%, #289ad8 75%);
-              background-image: -webkit-linear-gradient( -35deg, #0288d1 75%, #289ad8 75%);
-              background-image: -ms-linear-gradient( -35deg, #0288d1 75%, #289ad8 75%);
+              background-color: $strong-blue-2;
               border: 0;
-              color: #fff;
+              color: $white;
+              cursor: pointer;
               line-height: 30px;
               padding: 0 11px;
             }
@@ -92,24 +117,75 @@
 			.filter-experience-block {
 				margin-top: 30px;
 				.filter-experience {
-					background-color: $white;
-					height: 80px;
-					padding: 10px 25px;
-				}
+          background-color: $white;
+          border-radius: 3px;
+          padding: 20px 25px;
+          input {
+            border: 0;
+            padding: 0 4px;
+            width: 30px;
+          }
+          .input-range__label {
+            display: none;
+          }
+          .input-range__track--active {
+            background: $pure-blue;
+          }
+          .input-range__slider {
+            background: $pure-blue;
+            border: 1px solid $white;
+          }
+        }
+
+        .apply {
+          text-align: right;
+          button {
+            background: none;
+            border: 1px solid $pure-blue;
+            border-radius: 3px;
+            color: $black;
+            font-size: 12px;
+            height: 30px;
+            margin-top: 20px;
+            padding: 0 10px;
+            text-transform: uppercase;
+            &::after {
+              background: url('../images/select-small.png') no-repeat 0 0;
+              content: '';
+              display: inline-block;
+              height: 7px;
+              margin-left: 5px;
+              width: 9px;
+            }
+
+            &:hover::after {
+              background-position: 0 -9px;
+            }
+
+            &:hover {
+              background-color: $strong-blue-2;
+              border: 0;
+              color: $white;
+              cursor: pointer;
+              line-height: 30px;
+              padding: 0 11px;
+            }
+          }
+        }
 			}
 			.filter-sex-block {
 				margin-top: 30px;
 				.filter-sex {
 					background-color: $white;
 					padding: 10px 25px;
-				} 
+				}
 			}
 			.filter-age-block {
 				margin-top: 30px;
 				.filter-age {
 					background-color: $white;
 					padding: 10px 25px;
-				} 
+				}
 			}
 			.filter-country-block {
 				margin-top: 30px;
@@ -123,7 +199,7 @@
 				.filter-service {
 					background-color: $white;
 					padding: 10px 25px;
-				} 
+				}
 			}
 		}
 		.bread-dote {
@@ -243,37 +319,10 @@
 	width: 100%
 }
 
-.mu-about-right ul li {
-	float: left;
-	list-style: none;
-	margin-bottom: 25px;
-}
-
-.mu-about-right ul li h3 {
-	border-bottom: 3px solid $light-gray;
-	color: $gray-dark-4;
-	display: inline-block;
-	font-size: 20px;
-	margin-bottom: 15px;
-	padding-bottom: 5px;
-}
-
-.mu-about-right p {
-	font-size: 14px;
-}
-
 .horizontal-line {
 	background-color: $strong-blue-1;
 	height: 1px;
 	margin: 50px auto;
-	opacity: .3;
-	width: 80%;
-}
-
-.horizontal-line-about {
-	background-color: $strong-blue-1;
-	height: 1px;
-	margin: -50px auto;
 	opacity: .3;
 	width: 80%;
 }
