--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -45,5 +45,6 @@ $reddish-white: #f2dede;
 $strong-red: #b94a48;
 $very-light-gray: #ebebeb;
 $medium-gray-3: #959595;
+$solitude: #e5e6e9;
 //fonts
 $font-dancing: 'Pacifico';
