fix service page, added last vacancies on home page

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -4,7 +4,6 @@
 @import 'basic';
 @import 'header';
 @import 'slick';
-@import 'media';
 @import 'footer';
 @import 'spinner';
 @import 'contacts';
@@ -18,3 +17,5 @@
 @import 'call-back';
 @import 'vacancy';
 @import 'services';
+@import 'pricing';
+@import 'media';
