--- a/src/assets/styles/pricing.scss
+++ b/src/assets/styles/pricing.scss
@@ -1,8 +1,8 @@
 #mu-pricing {
 	background-color: #fff;
+	display: inline;
 	float: left;
 	padding: 100px 0;
-	display: inline;
 	width: 100%;
 }
 
@@ -34,11 +34,11 @@
 }
 
 .mu-pricing-table > li {
-	list-style: none;
 	display: inline-block;
+	list-style: none;
 	margin: 0 15px;
-	width: 24%;
 	vertical-align: middle;
+	width: 24%;
 }
 
 .mu-pricing-table > li.mu-standard-pricing {
@@ -46,21 +46,21 @@
 }
 
 .mu-pricing-single {
+	border-radius: 5px;
+	box-shadow: 0 0 14px #ededed;
 	display: inline;
 	float: left;
-	text-align: center;
-	padding: 20px 0;
 	min-height: 500px;
+	padding: 20px 0;
+	text-align: center;
 	width: 100%;
-	box-shadow: 0px 0px 14px #ededed;
-	border-radius: 5px;
 }
 
 .mu-pricing-single-icon {
 	display: inline;
 	float: left;
-	width: 100%;
 	padding-bottom: 30px;
+	width: 100%;
 }
 
 .mu-pricing-single-icon span {
@@ -79,22 +79,22 @@
 
 .mu-pricing-single-title h3 {
 	font-size: 24px;
-	text-transform: uppercase;
 	margin-bottom: 0;
+	text-transform: uppercase;
 }
 
 .mu-pricing-single-content {
+	display: inline;
+  float: left;
 	padding: 35px 0 15px;
-  display: inline;
 	width: 100%;
-	float: left;
 }
 
 .mu-pricing-single-content ul li {
-	color: #666666;
+	color: #666;
 	font-size: 14px;
-	list-style: none;
 	line-height: 1.7;
+	list-style: none;
 }
 
 .mu-single-pricebox {
@@ -106,13 +106,13 @@
 
 .mu-single-pricebox h4 {
 	color: #0277bd;
-	font-size: 48px;
 	font-family: 'Open Sans', sans-serif;
+	font-size: 48px;
 }
 
 .mu-single-pricebox h4 > span {
-	font-weight: normal;
 	font-size: 14px;
+	font-weight: normal;
 }
 
 .mu-buy-now-btn {
@@ -121,9 +121,9 @@
 	color: #fff;
 	display: inline-block;
 	font-size: 18px;
+	margin-bottom: 20px;
 	padding: 10px 50px;
 	text-transform: uppercase;
-	margin-bottom: 20px;
 }
 
 .mu-buy-now-btn:hover,
@@ -149,7 +149,7 @@
 	color: #fff;
 	display: inline-block;
 	font-size: 18px;
+	margin-bottom: 35px;
 	padding: 8px 48px;
 	text-transform: uppercase;
-	margin-bottom: 35px;
 }
