--- a/src/assets/styles/_helpers.scss
+++ b/src/assets/styles/_helpers.scss
@@ -12,6 +12,14 @@
   }
 }
 
+.fs-07r {
+  font-size: 0.7rem;
+}
+
+.w-70p {
+  width: 70%;
+}
+
 .color-strong-blue-2 {
   color: $strong-blue-2;
 }
