--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -25,15 +25,19 @@ a {
 		height: 110px;
 		justify-content: space-evenly;
 		margin: 40px auto;
-		span {
+    .react-autosuggest__container {
+      display: inline-block;
+      width: 50%;
+    }
+		div.vacancy-label {
 			color: $white;
 			font-size: 23px;
-		}
+    }
 		input {
 			border: 0;
 			border-radius: 2px;
-			padding: 8px;
-			width: 27%;
+      padding: 8px;
+      width: 100%;
 		}
 		button {
 			background-color: $luminous-vivid-orange;
