--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -99,8 +99,8 @@ a {
             padding: 0 10px;
             text-transform: uppercase;
             &.filter-disabled-button {
-              border: 1px solid #808080;
-              color: #808080;
+              border: 1px solid $medium-gray;
+              color: $medium-gray;
             }
 
             &::after {
@@ -163,8 +163,8 @@ a {
             padding: 0 10px;
             text-transform: uppercase;
             &.filter-disabled-button {
-              border: 1px solid #808080;
-              color: #808080;
+              border: 1px solid $medium-gray;
+              color: $medium-gray;
             }
 
             &::after {
@@ -227,8 +227,8 @@ a {
 							padding: 0 10px;
               text-transform: uppercase;
               &.filter-disabled-button {
-                border: 1px solid #808080;
-                color: #808080;
+                border: 1px solid $medium-gray;
+                color: $medium-gray;
               }
 							&::after {
 								background: url('../images/select-small.png') no-repeat 0 0;
@@ -295,8 +295,8 @@ a {
 							padding: 0 10px;
               text-transform: uppercase;
               &.filter-disabled-button {
-                border: 1px solid #808080;
-                color: #808080;
+                border: 1px solid $medium-gray;
+                color: $medium-gray;
               }
 							&::after {
 								background: url('../images/select-small.png') no-repeat 0 0;
@@ -340,8 +340,8 @@ a {
 							padding: 0 10px;
               text-transform: uppercase;
               &.filter-disabled-button {
-                border: 1px solid #808080;
-                color: #808080;
+                border: 1px solid $medium-gray;
+                color: $medium-gray;
               }
 							&::after {
 								background: url('../images/select-small.png') no-repeat 0 0;
@@ -402,8 +402,8 @@ a {
 							padding: 0 10px;
               text-transform: uppercase;
               &.filter-disabled-button {
-                border: 1px solid #808080;
-                color: #808080;
+                border: 1px solid $medium-gray;
+                color: $medium-gray;
               }
 							&::after {
 								background: url('../images/select-small.png') no-repeat 0 0;
