--- a/src/assets/styles/_clients-say.scss
+++ b/src/assets/styles/_clients-say.scss
@@ -47,6 +47,9 @@
 .mu-testimonial-slide li {
 	list-style: none;
 	text-align: center;
+	.mu-primary-btn {
+		margin: 0;
+	}
 }
 
 .mu-client-quote {
