--- a/src/assets/styles/_slider.scss
+++ b/src/assets/styles/_slider.scss
@@ -42,7 +42,7 @@
 .mu-single-slide-content-area {
 	bottom: 0;
 	left: 0;
-	padding: 12% 16%;
+	padding: 6% 16%;
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -51,23 +51,23 @@
 }
 
 .mu-single-slide-content {
-	display: inline;
+  display: inline;
 	float: left;
 	text-align: center;
 	width: 100%;
-}
+  p {
+    color: $white;
+    font-size: 19px;
+    font-weight: 800;
+    margin-bottom: 15px;
+  }
 
-.mu-single-slide-content h1 {
-	font-size: 48px;
-	margin-bottom: 30px;
-	text-transform: uppercase;
-}
-
-.mu-single-slide-content p {
-	color: $white;
-	font-size: 19px;
-	font-weight: 800;
-	margin-bottom: 15px;
+  h1 {
+    color: $white;
+    font-size: 48px;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+  }
 }
 
 .mu-primary-btn {
@@ -77,7 +77,7 @@
 	display: inline-block;
 	font-size: 18px;
 	font-weight: 700;
-	margin-top: 125px;
+	margin-top: 100px;
 	padding: 15px 40px;
 	text-transform: uppercase;
 }
