--- a/src/assets/styles/_vacancy.scss
+++ b/src/assets/styles/_vacancy.scss
@@ -74,6 +74,12 @@
     font-size: 18px;
     line-height: 0.9;
     overflow: hidden;
+    white-space: pre-line;
     word-wrap: break-word;
+    p {
+      font-size: 16px;
+      line-height: 1.5;
+      max-width: 40em;
+    }
   }
 }
