--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -562,29 +562,55 @@ a {
 .ReactModal__Content {
 	background-color: $black;
 	color: $white;
+	.header-modal-vacancy {
+		display: flex;
+		height: 40px;
+		justify-content: center;
+		.title-vacancy {
+			font-size: 18px;
+		}
+		.btn-close {
+			display: flex;
+			justify-content: space-between;
+			margin: -7px 0 20px 10px;
+			button {
+				background-color: $light-blue;
+				border-radius: 50%;
+				color: $white;
+				height: 40px;
+				&:hover {
+					background-color: $white;
+					color: $light-blue;
+					cursor: pointer;
+				}
+			}
+		}
+	}
+	.horizontal-line {
+		background-color: $white;
+		margin: 10px 0;
+		width: 100%;
+	}
 	.modal-form-respond {
 		align-items: inherit;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		div {
-			align-items: center;
-			display: flex;
-			justify-content: space-between;
-			margin-top: 10px;
-			width: 100%;
+		.horizontal-line {
+			margin: 8px 0 25px 0;
+		}
 			label {
 				font-size: 18px;
+				width: 100%;
 			}
-			input {
-				border: 0;
-				border-radius: 10px;
-				height: 30px;
-				padding: 5px;
-				width: 80%;
-				&:focus {
-					outline: none;
-				}
+		.additional-info {
+			display: flex;
+			flex-direction: column;
+			label {
+				width: 100%;
+			}
+			textarea {
+				width: 100%;
 			}
 		}
 		button {
