fix vacancy page

--- a/src/assets/styles/_clients-say.scss
+++ b/src/assets/styles/_clients-say.scss
@@ -47,6 +47,9 @@
 .mu-testimonial-slide li {
 	list-style: none;
 	text-align: center;
+	h5 {
+		font-family: 'Segoe';
+	}
 	.mu-primary-btn {
 		margin: 0;
 	}
