--- a/src/assets/styles/_counter.scss
+++ b/src/assets/styles/_counter.scss
@@ -62,7 +62,7 @@
 
 .counter-value {
 	color: $white;
-	font-family: 'Helvetica', sans-serif;
+	font-family: 'Intro';
 	font-size: 36px;
 	font-weight: 700;
 	line-height: 1.2;
@@ -72,6 +72,7 @@
 
 .mu-counter-name {
 	color: $white;
+	font-family: 'Intro';
 	font-size: 24px;
 	font-weight: 400;
 	text-transform: uppercase;
