--- a/src/assets/styles/_helpers.scss
+++ b/src/assets/styles/_helpers.scss
@@ -36,3 +36,15 @@
   padding: 30px;
 }
 
+@font-face {
+  font-family: 'Pacifico';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./fonts/Pacifico-Regular.ttf')format('truetype');
+}
+@font-face {
+  font-family: 'Intro';
+  font-style: normal;
+  font-weight: normal;
+  src: url('./fonts/NewBaskervilleC Bold.ttf')format('truetype');
+}
