--- a/src/assets/styles/_spinner.scss
+++ b/src/assets/styles/_spinner.scss
@@ -32,7 +32,7 @@ div.spinner-content {
   justify-content: center;
   p {
     color: $strong-blue-5;
-    font-family: 'Pacifico', cursive;
+    font-family: 'Pacifico';
     font-size: 100px;
   }
 }
