--- a/src/assets/styles/_services.scss
+++ b/src/assets/styles/_services.scss
@@ -15,7 +15,7 @@
         border-bottom: 1px solid $pure-blue;
         border-radius: 10px 10px 0 0 ;
         padding: 10px 0;
-        text-align: center;
+				text-align: center;
       }
 
       .description-service {
@@ -52,6 +52,14 @@
 	display: inline;
 	float: left;
 	width: 100%;
+	.mu-title {
+		h2 {
+			font-family: 'Segoe';
+		}
+	}
+	.mu-primary-btn {
+		margin: 0;
+	}
 }
 
 .mu-service-content {
@@ -90,6 +98,7 @@
 
 .mu-single-service-content h3 {
 	color: $gray-dark-4;
+	font-family: 'Segoe';
 	font-size: 18px;
 	text-transform: uppercase;
 }
