--- a/src/assets/styles/_slider.scss
+++ b/src/assets/styles/_slider.scss
@@ -56,14 +56,16 @@
 	text-align: center;
 	width: 100%;
   p {
-    color: $white;
+		color: $white;
+		font-family: 'Intro';
     font-size: 19px;
     font-weight: 800;
     margin-bottom: 15px;
   }
 
   h1 {
-    color: $white;
+		color: $white;
+		font-family: 'Intro';	
     font-size: 48px;
     margin-bottom: 30px;
     text-transform: uppercase;
@@ -75,6 +77,7 @@
 	border-radius: 25px;
 	color: $white;
 	display: inline-block;
+	font-family: 'Segoe';	
 	font-size: 18px;
 	font-weight: 700;
 	margin-top: 100px;
