by aggreement added

--- a/src/assets/styles/_pricing.scss
+++ b/src/assets/styles/_pricing.scss
@@ -108,9 +108,10 @@
 }
 
 .mu-single-pricebox h4 {
-	color: $strong-blue-2;
+  color: $strong-blue-2;
 	font-family: 'Open Sans', sans-serif;
-	font-size: 48px;
+	font-size: 25px;
+	margin-top: 20px;
 }
 
 .mu-single-pricebox h4 > span {
