package json fix

--- a/src/assets/styles/autosuggestion.scss
+++ b/src/assets/styles/autosuggestion.scss
@@ -3,14 +3,14 @@
 }
 
 .react-autosuggest__input {
-  width: 240px;
-  height: 30px;
-  padding: 10px 20px;
-  font-family: Helvetica, sans-serif;
-  font-weight: 300;
-  font-size: 16px;
   border: 1px solid #aaa;
   border-radius: 4px;
+  font-family: Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  height: 30px;
+  padding: 10px 20px;
+  width: 240px;
 }
 
 .react-autosuggest__input:focus {
@@ -27,24 +27,24 @@
 }
 
 .react-autosuggest__container--open .react-autosuggest__suggestions-container {
+  background-color: #fff;
+  border: 1px solid #aaa;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
   display: block;
+  font-family: Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 300;
   position: absolute;
   top: 51px;
   width: 280px;
-  border: 1px solid #aaa;
-  background-color: #fff;
-  font-family: Helvetica, sans-serif;
-  font-weight: 300;
-  font-size: 16px;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
   z-index: 2;
 }
 
 .react-autosuggest__suggestions-list {
+  list-style-type: none;
   margin: 0;
   padding: 0;
-  list-style-type: none;
 }
 
 .react-autosuggest__suggestion {
@@ -57,39 +57,39 @@
 }
 
 .react-autosuggest__suggestion--focused {
-  background-color: #0C7EAF;
+  background-color: #0c7eaf;
   color: #fff;
 }
 
 .suggestion-content {
-  display: flex;
   align-items: center;
   background-repeat: no-repeat;
+  display: flex;
 }
 
 .dancounsell {
-  background-image: url(https://s3.amazonaws.com/uifaces/faces/twitter/dancounsell/48.jpg);
+  background-image: url('https://s3.amazonaws.com/uifaces/faces/twitter/dancounsell/48.jpg');
 }
 
 .ladylexy {
-  background-image: url(https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/48.jpg);
+  background-image: url('https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/48.jpg');
 }
 
 .mtnmissy {
-  background-image: url(https://s3.amazonaws.com/uifaces/faces/twitter/mtnmissy/48.jpg);
+  background-image: url('https://s3.amazonaws.com/uifaces/faces/twitter/mtnmissy/48.jpg');
 }
 
 .steveodom {
-  background-image: url(https://s3.amazonaws.com/uifaces/faces/twitter/steveodom/48.jpg);
+  background-image: url('https://s3.amazonaws.com/uifaces/faces/twitter/steveodom/48.jpg');
 }
 
 .name {
-  margin-left: 68px;
   line-height: 45px;
+  margin-left: 68px;
 }
 
 .highlight {
-  color: #ee0000;
+  color: #e00;
   font-weight: bold;
 }
 
