--- a/src/assets/styles/_contacts.scss
+++ b/src/assets/styles/_contacts.scss
@@ -68,3 +68,8 @@ form .btn-contact-form-send {
 	flex-direction: column;
 	justify-content: center;
 }
+
+.map-label {
+  font-size: 14px;
+  font-weight: bold;
+}
