--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -436,3 +436,10 @@ a {
 		}
 	}
 }
+
+.vacancy-photo {
+  margin-top: 33px;
+  max-height: 215px;
+  min-height: 195px;
+  vertical-align: middle
+}
