--- a/src/assets/styles/_vacancies.scss
+++ b/src/assets/styles/_vacancies.scss
@@ -13,6 +13,15 @@ a {
 	width: 100%;
 }
 
+.hot-img {
+	background-image: url('../images/hot-img.png');
+	background-repeat: no-repeat;
+	width: 150px;
+	height: 100px;
+	position: absolute;
+	right: 150px;
+}
+
 .mu-vacancies-area {
 	display: inline;
 	float: left;
