--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -24,6 +24,8 @@ $luminous-vivid-orange: #ffa500;
 $medium-gray: #808080;
 $yellowish-white: #fffed7;
 $light-gray: #e5e5e5;
+$light-gray-2: #e8ecef;
+$light-gray-3: #ededec;
 $light-reddish-gray: #e0dbdb;
 $rgb-black: rgba (0 0 0);
 $rgb-gray: rgba (255 255 255);
